Modules refactoring. Lot of commented out code.

--- a/code/Makefile
+++ b/code/Makefile
@@ -1,9 +1,9 @@
 CROSS := xtensa-lx106-elf-
 CC := $(CROSS)gcc
 LD := $(CROSS)gcc
-CFLAGS = -I. -mlongcalls
+CFLAGS = -I. -mlongcalls -Os
 LDLIBS = -nostdlib -Wl,--start-group -lmain -lnet80211 -lwpa -llwip -lpp -lphy  -Wl,--end-group -lgcc
-LDFLAGS = -Teagle.app.v6.ld
+LDFLAGS = -Teagle.app.v6.ld -Os
 
 CSRC = main.c uart.c gpio16.c network.c node.c umqtt.c mqttclient.c
 OBJS = $(subst .c,.o,$(CSRC))
