--- a/code/Makefile
+++ b/code/Makefile
@@ -6,7 +6,7 @@ CFLAGS = -I. -mlongcalls -Os
 LDLIBS = -nostdlib -Wl,--start-group -lmain -lnet80211 -lwpa -llwip -lpp -lphy  -Wl,--end-group -lgcc
 LDFLAGS = -Teagle.app.v6.ld -Os
 
-CSRC = main.c uart.c gpio16.c network.c node.c umqtt.c mqttclient.c
+CSRC = main.c uart.c gpio16.c network.c node.c umqtt.c mqttclient.c i2c_master.c bmp180.c
 OBJS = $(subst .c,.o,$(CSRC))
 
 all: esp8266-firmware.elf
