Signaling MQTT activity with LED moved into separate file.

--- a/code/Makefile
+++ b/code/Makefile
@@ -5,7 +5,7 @@ CFLAGS = -Wall -Wno-implicit-function-declaration -I. -mlongcalls -Os -DICACHE_F
 LDLIBS = -nostdlib -Wl,--start-group -lmain -lnet80211 -lwpa -llwip -lpp -lphy  -Wl,--end-group -lgcc
 LDFLAGS = -Teagle.app.v6.ld -Os -Wl,-static
 
-CSRC = main.c uart.c gpio16.c network.c node.c umqtt.c mqttclient.c i2c_master.c bmp180.c
+CSRC = main.c uart.c gpio16.c network.c node.c umqtt.c mqttclient.c i2c_master.c bmp180.c actsig.c
 OBJS = $(subst .c,.o,$(CSRC))
 
 all: esp8266-firmware.elf
