Added configuration option for BH1750FVI I2C address.

--- a/Config.in
+++ b/Config.in
@@ -160,6 +160,17 @@ config SENSOR_BMP180_PRESSURE_TOPIC
 	depends on SENSOR_BMP180 && SENSOR_BMP180_PRESSURE
 	default "pressure"
 endif # SENSOR_BMP180_PRESSURE
+
+# BH1750FVI sensor settings.
+choice
+	prompt "BH1750FVI I2C address"
+	default SENSOR_BH1750FVI_I2C_ADDRESS_0X23
+	depends on SENSOR_BH1750FVI
+config SENSOR_BH1750FVI_I2C_ADDRESS_0X23
+	bool "0x23"
+config SENSOR_BH1750FVI_I2C_ADDRESS_0X5C
+	bool "0x5c"
+endchoice
 config SENSOR_BH1750FVI_AMBIENTLIGHT_TOPIC
 	string "BMP180 Ambient light topic"
 	depends on SENSOR_BH1750FVI
